--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,12 +14,28 @@
     <h1>Welcome to the Developers Tech Blog</h1>
   </header>
   <nav>
-    <a href="/">Login</a>
-  </nav>
-  <main>
-    <div>
-      {{{body}}}
-    </div>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <a href="/profile">profile</a> |
+        <button class="no-button" id="logout">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
+    <main class="container container-fluid mt-5">
+      <!-- Render the sub layout -->
+      {{{ body }}}
+    </main>
+    <footer>
+      
+    </footer>
+  </div>
+
+  <!-- Render script for logged in users only -->
+  {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
   </main>
 </body>
 
