--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -2,5 +2,5 @@
   <h2>{{name}}</h2>
   <p>{{title}}</p>
   <p>{{content}}</p>
-  <p>Created by {{user.name}} on {{format_date}}</p>
+  <p>Created by {{user.name}} on {{date_created}}</p>
 </div>
