--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,15 @@
 <!-- Loop over each object in the post array -->
 {{#each posts as |post|}}
-<div class="row mb-4 post">
-  <div class="col-md-5">
-    <h2>
-      <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
+  {{!-- <div class="row mb-4 post"> --}}
+  <div class="card mb-4 ">
+    <div class="card-header">
+      <h4>
+        <a href="/post/{{post.id}}">{{post.title}}</a> <br>
+        <span>Created by {{post.user.name}} on {{format_date post.date_created}}</span>
+      </h4>
+    </div>
+    <div class="card-body">
+      <p> {{post.content}} </p>
+    </div>
   </div>
-  <div class="col-md-7">
-    <p>
-      {{post.content}}
-    </p>
-  </div>
-</div>
 {{/each}}
