--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,7 +4,55 @@
   </div>
 </div>
 
-<div class="row mt-4">
+{{!-- ---------- body ----------- --}}
+<div class="container">
+  <div class="row mt-4">
+    <div class="card col-md-8">
+      <div class="card-header">
+        <h3>Create a New Post:</h3>
+      </div>
+      <div class="card-body">
+        <form class="form new-post-form labels">
+          <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="post-title">Post name </label>
+            <input class="col-sm-10 form-input" type="text" id="post-title" name="post-title" />
+          </div>
+          <div class="form-group row">
+            <label class="col-sm-2 col-form-label" for="post-content">Content </label>
+            <textarea class="col-sm-10 form-input" rows="5" id="post-content" name="post-content"></textarea>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary">Create</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    {{#if posts.length}}
+    <div class="card col-md-4">
+      <div class="card-header">
+        <h3>Current Posts:</h3>
+      </div>
+      <div class="card-body post-list">
+        {{#each posts as |post|}}
+        <div class="row mb-2">
+          <div class="col-md-8">
+            <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
+          </div>
+          <div class="col-md-4">
+            <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+          </div>
+        </div>
+        {{/each}}
+      </div>
+      {{/if}}
+    </div>
+  </div>
+</div>
+
+
+{{!-- ************** previous version ************** --}}
+{{!-- <div class="row mt-4">
   <div class="col-md-6">
     <h3>Create a New Post:</h3>
 
@@ -39,6 +87,6 @@
     {{/each}}
   </div>
   {{/if}}
-</div>
+</div> --}}
 
 <script src="./js/profile.js"></script>
