--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,8 +55,6 @@ nav {
   border: none;
   color: black;
   height: 3em;
-  /* vertical-align: middle; */
-  /* align-items: center; */
 }
 
 h4 {
@@ -66,4 +64,26 @@ h4 {
 h4 span {
   font-size: 0.5em;
   padding: 0;
+}
+
+.footer > p {
+  color: var(--tertiary);
+  text-align: center;
+  display: block;
+  margin: 0px;
+  height: 30px;
+  background-color: rgb(64, 119, 236);
+}
+
+.footer {
+  margin-top: 2%;
+}
+
+.container {
+  width: 100% ;
+  height: 100%;
+}
+
+.labels {
+  white-space: nowrap;
 }
