reorganize post page and modify footer to fixed at bottom

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
     <!-- Render the sub layout -->
     {{{ body }}}
   </main>
-  <footer class="footer">
+  <footer class="footer fixed-bottom">
     <p> &copy 2022 Mandy Tsang </p>
   </footer>
   </div>
