--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: #b62020;
+    --primary: #28f8ff;
     --secondary: #c0c5ce;
     --tertiary: #f9f9f9;
     --quatrinary: #838996;
@@ -28,7 +28,7 @@ a:visited {
 header {
   padding: 40px;
   text-align: center;
-  background: var(--primary);
+  background-color: var(--primary);
   color: var(--light);
 }
   
@@ -72,11 +72,7 @@ h4 span {
   display: block;
   margin: 0px;
   height: 30px;
-  background-color: rgb(64, 119, 236);
-}
-
-.footer {
-  margin-top: 2%;
+  background-color: var(--primary);
 }
 
 .container {
