--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,11 @@
-<div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{title}}</p>
-  <p>{{content}}</p>
-  <p>Created by {{user.name}} on {{date_created}}</p>
+<div class="container">
+  <div class="card">
+    <div class="card-header d-flex flex-row flex-wrap justify-content-between align-items-end">
+      <h5 class="mb-1">{{title}}</h5>
+      <p class="mb-1">Created by {{user.name}} on {{format_date date_created}}</p>
+    </div>
+    <div class="card-body">
+      <p class="card-text"> {{content}} </p>
+    </div>
+  </div>
 </div>
