--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,10 +10,8 @@
   <title>Developers Tech Blog</title>
 </head>
 
+{{!-- <body style="background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/015.webp')" class="bg-image"> --}}
 <body>
-  <header>
-    <h1>Welcome to the Developers Tech Blog</h1>
-  </header>
   <nav class="navbar">
     <a class="d-lg-flex align-items-center highlight" href="/">TechTalk</a>
     {{#if logged_in}}
