--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -4,7 +4,7 @@
       <h5 class="mb-1">{{title}}</h5>
       <p class="mb-1">Created by {{user.name}} on {{format_date date_created}}</p>
     </div>
-    <div class="card-body">
+    <div class="card-body postContent">
       <p class="card-text"> {{content}} </p>
     </div>
   </div>
